--- a/src/styles/components/_write.scss
+++ b/src/styles/components/_write.scss
@@ -1,6 +1,11 @@
 .write-page {
   display: flex;
 }
+.write__header {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
 .write__content {
   display: flex;
   flex-direction: column;
