--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,8 @@
 // Colors
-$primary: #5c62c5;
+$primary: #58355e;
 $dark-grey: #363636;
 $light-grey: #d8d8d8;
+
+:export {
+  primary: $primary;
+}
