--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -4,14 +4,14 @@
 
 html,
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   height: 100vh;
   width: 100vw;
   background: #fafafa;
 }
 
 a {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: #666;
@@ -54,29 +54,6 @@ textarea {
 textarea:focus,
 input:focus {
   border-color: transparent !important;
-}
-
-.m-1 {
-  margin: 5px;
-}
-.m-5 {
-  margin: 20px;
-}
-
-.mt-1 {
-  margin-top: 5px;
-}
-
-.mt-5 {
-  margin-top: 20px;
-}
-
-.mb-1 {
-  margin-bottom: 5px;
-}
-
-.mb-5 {
-  margin-bottom: 20px;
 }
 
 .pointer {
